IE fix for over stretched image in entrance box

--- a/src/shared/components/entrance-box/entrance-box.css
+++ b/src/shared/components/entrance-box/entrance-box.css
@@ -52,7 +52,7 @@
    */
 
   &__media {
-    height: auto;
+    height: 100%;
     width: 100%;
     object-fit:cover;
   }
